<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- This shows user name, id and image at first line. -->

    <TextView
        android:id="@+id/username"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_weight="4"
        android:maxEms="5"
        android:maxLines="2"
        android:paddingLeft="25dp"
        android:text="id"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/line1"
        app:layout_constraintEnd_toStartOf="@+id/roundedImageView2"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <com.makeramen.roundedimageview.RoundedImageView
        android:id="@+id/roundedImageView2"
        android:layout_width="96dp"
        android:layout_height="138dp"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_weight="1"
        android:src="@drawable/test"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:riv_border_color="#333333"
        app:riv_border_width="2dp"
        app:riv_corner_radius="30dp"
        app:riv_mutate_background="true"
        app:riv_oval="false"
        app:riv_tile_mode="repeat" />

    <TextView
        android:id="@+id/line1"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:background="@color/gray"
        app:layout_constraintTop_toBottomOf="@+id/roundedImageView2" />

    <ImageView
        android:id="@+id/message_Image"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:background="@drawable/ic_baseline_notifications_24"
        app:layout_constraintTop_toBottomOf="@+id/line1"
        app:layout_constraintEnd_toStartOf="@+id/message"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="188dp" />

    <TextView
        android:id="@+id/message"
        android:layout_width="289dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:onClick="onClick"
        android:paddingLeft="20dp"
        android:text="Message"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:layout_constraintTop_toBottomOf="@+id/line1"
        app:layout_constraintLeft_toRightOf="@id/message_Image"
        tools:ignore="MissingConstraints" />

    <ImageButton
        android:id="@+id/message_Button"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_weight="1"
        android:background="@drawable/ic_baseline_navigate_next_24"
        android:clickable="true"
        app:layout_constraintLeft_toRightOf="@id/message"
        app:layout_constraintTop_toBottomOf="@+id/line1" />

    <TextView
        android:id="@+id/line2"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:background="@color/gray"
        app:layout_constraintTop_toBottomOf="@+id/message" />

    <ImageView
        android:id="@+id/all_post_image"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginEnd="4dp"
        android:layout_weight="1"
        android:background="@drawable/ic_baseline_article_24"
        app:layout_constraintTop_toBottomOf="@+id/line2"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/my_post"
        android:layout_width="289dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:clickable="true"
        android:focusable="true"
        android:onClick="onClick"
        android:paddingLeft="20dp"
        android:text="@string/AllPost"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@+id/line2"
        app:layout_constraintLeft_toRightOf="@id/all_post_image" />

    <ImageButton
        android:id="@+id/my_post_button"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:background="@drawable/ic_baseline_navigate_next_24"
        app:layout_constraintTop_toBottomOf="@+id/line2"
        app:layout_constraintLeft_toRightOf="@id/my_post" />

    <TextView
        android:id="@+id/line3"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:background="@color/gray"
        app:layout_constraintTop_toBottomOf="@+id/my_post" />

    <ImageView
        android:id="@+id/paint_image"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:background="@drawable/ic_baseline_history_24"
        app:layout_constraintTop_toBottomOf="@+id/line3"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/paint_button"
        android:layout_width="289dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:onClick="onClick"
        android:paddingLeft="20dp"
        android:text="Paint"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:layout_constraintTop_toBottomOf="@+id/line3"
        app:layout_constraintLeft_toRightOf="@id/paint_image" />

    <ImageButton
        android:id="@+id/paint"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_weight="1"
        android:background="@drawable/ic_baseline_navigate_next_24"
        app:layout_constraintTop_toBottomOf="@+id/line3"
        app:layout_constraintLeft_toRightOf="@id/paint_button" />

    <TextView
        android:id="@+id/line4"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:background="@color/gray"
        app:layout_constraintTop_toBottomOf="@+id/paint_button" />

    <ImageView
        android:id="@+id/logout_image"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:background="@drawable/ic_baseline_settings_24"
        app:layout_constraintTop_toBottomOf="@+id/line4"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/logout_button"
        android:layout_width="289dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:onClick="onClick"
        android:paddingLeft="20dp"
        android:text="Logout"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:layout_constraintTop_toBottomOf="@+id/line4"
        app:layout_constraintLeft_toRightOf="@id/logout_image" />

    <ImageButton
        android:id="@+id/logout"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_weight="1"
        android:background="@drawable/ic_baseline_navigate_next_24"
        app:layout_constraintTop_toBottomOf="@+id/line4"
        app:layout_constraintLeft_toRightOf="@id/logout_button" />

</androidx.constraintlayout.widget.ConstraintLayout>