package com.example.myapplication;

import androidx.test.ext.junit.runners.AndroidJUnit4;
import androidx.test.filters.LargeTest;
import androidx.test.rule.ActivityTestRule;

import org.junit.Rule;
import org.junit.Test;
import org.junit.runner.RunWith;

@RunWith(AndroidJUnit4.class)
@LargeTest
public class MainActivityTest111 {
    @Rule
    public ActivityTestRule<MainActivity> mActivityTestRule = new ActivityTestRule<>(MainActivity.class);

    @Test
    public void mainActivityTest() {
//        onView(withId(R.id.username)).check(matches(withText("测试用户名测试用户名测试用户名 测试id")));
//        onView(withId(R.id.num_friend)).check(matches(withText("0")));
//        onView(withId(R.id.num_fans)).check(matches(withText("0")));
//        onView(withId(R.id.num_cares)).check(matches(withText("0")));
//        onView(withId(R.id.num_friendtext)).check(matches(withText("测试好友数")));
//        onView(withId(R.id.num_fanstext)).check(matches(withText("测试粉丝数")));
//        onView(withId(R.id.num_carestext)).check(matches(withText("测试关注数")));
//        onView(withId(R.id.message)).check(matches(withText("测试消息")));
//        onView(withId(R.id.message_Button)).perform(click()).check(matches(isClickable()));
//        onView(withId(R.id.my_post)).check(matches(withText("测试帖子")));
//        onView(withId(R.id.my_post_button)).perform(click()).check(matches(isClickable()));
//        onView(withId(R.id.my_history)).check(matches(withText("测试浏览历史")));
//        onView(withId(R.id.my_history_button)).perform(click()).check(matches(isClickable()));
//        onView(withId(R.id.setting)).check(matches(withText("测试设置")));
//        onView(withId(R.id.setting_button)).perform(click()).check(matches(isClickable()));
//        onView(withId(R.id.logout_button)).check(matches(withText("Logout")));
//        onView(withId(R.id.logout)).perform(click()).check(matches(isClickable()));
    }


}
